Section 4 - Authentication and authorization

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Data source=datingapp.db"
   },
+  "TokenKey" : "you have secured key to access",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
